unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Log__c/pse__Revenue_Forecast_Batch_Log__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RevenueForecastBatchLogHelp</customHelpPage>
    <description>Stores details of any errors that occurred when a revenue forecast was run.</description>
    <label>Revenue Forecast Batch Log</label>
    <nameField>
        <displayFormat>RFBL-{00000000}</displayFormat>
        <label>Revenue Forecast Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Batch Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>