unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Log__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the opportunity this log was generated for.</description>
    <inlineHelpText>Lookup to the opportunity this log was generated for.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Forecast Batch Logs</relationshipLabel>
    <relationshipName>Revenue_Forecast_Batch_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>