unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Log__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the project this log was generated for.</description>
    <inlineHelpText>A lookup to the project this log was generated for.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Revenue Forecast Batch Logs</relationshipLabel>
    <relationshipName>Revenue_Forecast_Batch_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>