unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Log__c/fields/pse__Revenue_Forecast_Batch__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Forecast_Batch__c</fullName>
    <description>A lookup to the revenue forecast batch this log was generated for.</description>
    <inlineHelpText>A lookup to the revenue forecast batch this log was generated for.</inlineHelpText>
    <label>Revenue Forecast Batch</label>
    <referenceTo>pse__Revenue_Forecast_Batch__c</referenceTo>
    <relationshipLabel>Revenue Forecast Batch Logs</relationshipLabel>
    <relationshipName>Revenue_Forecast_Batch_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>