unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>pse__Revenue_Forecast_Batch__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Message__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>pse__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>